JBRULES-153: Allowing indexing on null values
git-svn-id: https://svn.jboss.org/repos/labs/trunk/labs/jbossrules@3372 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70